# find-broken-desktop

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/fbrokendesktop/: __init__.py  __main__.py  cli.py  core.py  main.py
